Add BCrypt section & solution

--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "Learn the basics of securely storing user passwords on your Node server.",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon workshop/server.js --ignore **/*.json"
+    "dev": "nodemon solution-bcrypt/server.js --ignore **/*.json"
   },
   "keywords": [],
   "author": "Oliver Phillips <hello@oliverjam.es> (https://oliverjam.es/)",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "nodemon": "^2.0.2"
   }
 }
